go-web-app-chart/templates/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-web-app
  labels:
    app.kubernetes.io/name: go-web-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: go-web-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: go-web-app
    spec:
      containers:
      - name: go-web-app
        image: rajeshshetty28/go-web-app:latest
        ports:
        - containerPort: 8080
