go-web-app-chart/templates/service.yml
apiVersion: v1
kind: Service
metadata:
  name: go-web-app
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: go-web-app
  ports:
    - port: 80
      targetPort: 8080
